feat: add Centrifuge Chat

--- a/src/features/accommPrice/UI/styles.module.scss
+++ b/src/features/accommPrice/UI/styles.module.scss
@@ -11,8 +11,8 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    color: #4772e6;
-    border: 1px solid #4772e6;
+    color: var(--Personal-colors-main);
+    border: 1px solid var(--Personal-colors-main);
     background: var(--Personal-colors-White);
     padding: 20px 0;
 
