--- a/src/features/barPostFilter/UI/styles.module.scss
+++ b/src/features/barPostFilter/UI/styles.module.scss
@@ -10,7 +10,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: 0.75;
-    color: #4772e6;
+    color: var(--Personal-colors-main);
   }
 
   li {
