--- a/src/features/postPlatform/UI/styles.module.scss
+++ b/src/features/postPlatform/UI/styles.module.scss
@@ -78,6 +78,6 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    color: #4772e6;
+    color: var(--Personal-colors-main);
   }
 }
