--- a/src/widgets/wallet/UI/topUpCard/UI/styles.module.scss
+++ b/src/widgets/wallet/UI/topUpCard/UI/styles.module.scss
@@ -57,7 +57,7 @@
           border-radius: 12px;
 
           &:hover {
-            border: 1px solid #4772e6;
+            border: 1px solid var(--Personal-colors-main);
           }
         }
 
