--- a/src/features/paymentCard/UI/styles.module.scss
+++ b/src/features/paymentCard/UI/styles.module.scss
@@ -1,6 +1,6 @@
 .button {
   border-radius: 8px;
-  border: 1px solid #4772e6;
+  border: 1px solid var(--Personal-colors-main);
   padding: 10px;
   height: 40px;
 
