--- a/src/features/postDispay/UI/emptyPost/ui/styles.module.scss
+++ b/src/features/postDispay/UI/emptyPost/ui/styles.module.scss
@@ -56,11 +56,11 @@
 
     .button {
       border-radius: 8px;
-      border: 1px solid #4772e6;
+      border: 1px solid var(--Personal-colors-main);
       background: #fff;
 
       p {
-        color: #4772e6;
+        color: var(--Personal-colors-main);
       }
     }
 
