--- a/src/features/workWithUs/UI/styles.module.scss
+++ b/src/features/workWithUs/UI/styles.module.scss
@@ -19,7 +19,7 @@
     height: 150px;
     flex-shrink: 0;
     border-radius: 12px;
-    border: 1px solid #4772e6;
+    border: 1px solid var(--Personal-colors-main);
     background: var(--Personal-colors-White);
 
     img {
@@ -27,7 +27,7 @@
       height: 80px;
       flex-shrink: 0;
       border-radius: 50%;
-      border: 1px solid #4772e6;
+      border: 1px solid var(--Personal-colors-main);
     }
   }
 }
