--- a/src/shared/ui/themeChanger/styles.module.scss
+++ b/src/shared/ui/themeChanger/styles.module.scss
@@ -14,7 +14,7 @@
     width: 390px;
     height: 60px;
     border-radius: 12px;
-    border: 1px solid #4772e6;
+    border: 1px solid var(--Personal-colors-main);
     padding: 20px;
     color: rgba(0, 0, 0, 0.5);
     cursor: pointer;
