--- a/src/widgets/addPlatformBlock/UI/platformParameters/UI/styles.module.scss
+++ b/src/widgets/addPlatformBlock/UI/platformParameters/UI/styles.module.scss
@@ -40,7 +40,7 @@
     &.complite {
       border-radius: 40px;
       color: var(--Personal-colors-main);
-      border: 1px solid #4772e6;
+      border: 1px solid var(--Personal-colors-main);
       background: var(--Personal-colors-White);
 
       span {
