--- a/src/widgets/createOrderBlock/UI/createOrderPost/UI/styles.module.scss
+++ b/src/widgets/createOrderBlock/UI/createOrderPost/UI/styles.module.scss
@@ -34,7 +34,7 @@
           font-size: 44px;
           font-weight: bold;
           line-height: 1;
-          color: #4772e6;
+          color: var(--Personal-colors-main);
         }
 
         p {
