--- a/src/widgets/header/UI/lang/styles.module.scss
+++ b/src/widgets/header/UI/lang/styles.module.scss
@@ -12,7 +12,7 @@
     padding: 6px 15px;
     height: 25px;
     border-radius: 12px;
-    border: 1px solid #4772e6;
+    border: 1px solid var(--Personal-colors-main);
     color: var(--first-text);
     cursor: pointer;
     font-weight: inherit;
