--- a/src/widgets/header/UI/profile/styles.module.scss
+++ b/src/widgets/header/UI/profile/styles.module.scss
@@ -38,7 +38,7 @@
 
     &:hover {
       background-color: #f0f0f0;
-      color: #4772e6;
+      color: var(--Personal-colors-main);
     }
   }
 }
