--- a/src/widgets/profileTop/UI/styles.module.scss
+++ b/src/widgets/profileTop/UI/styles.module.scss
@@ -28,7 +28,7 @@
       font-size: 44px;
       font-style: normal;
       font-weight: 600;
-      color: #4772e6;
+      color: var(--Personal-colors-main);
     }
 
     svg {
