--- a/src/features/addFiles/UI/styles.module.scss
+++ b/src/features/addFiles/UI/styles.module.scss
@@ -1,4 +1,5 @@
 .wrapper {
+  width: 100%;
   display: grid;
   grid-auto-flow: row;
   align-content: space-between;
@@ -10,20 +11,17 @@
     background-color 0.3s;
 
   .empty {
-    height: 285px;
     display: grid;
     grid-auto-flow: row;
-    align-content: space-between;
+    gap: 20px;
     width: 100%;
     position: relative;
   }
 
   .top {
     display: grid;
-    // grid-auto-flow: column;
     grid-template: 1fr / 1fr 1fr;
-    // column-gap: 10px;
-    padding: 25px 10px;
+    padding: 10px;
     align-items: center;
     justify-content: start;
     border-radius: 12px;
@@ -53,7 +51,7 @@
         align-content: center;
         p {
           color: #4d4d4d;
-          font-size: 8px;
+          font-size: 10px;
           font-style: normal;
           font-weight: 400;
           // line-height: 0.75;
