--- a/src/features/postDispayInstagram/UI/styles.module.scss
+++ b/src/features/postDispayInstagram/UI/styles.module.scss
@@ -30,56 +30,67 @@
       width: 30%;
     }
 
-    .back {
+    .header {
       position: absolute;
       top: 60px;
-      left: 20px;
+      left: 50%;
+      transform: translate(-50%);
       z-index: 1;
-      width: 15%;
-    }
-
-    .channel {
+      width: 90%;
       display: grid;
-      justify-items: center;
-      position: absolute;
-      top: 56px;
-      left: 50%;
-      transform: translate(-50%);
-      z-index: 1;
+      grid-template: 1fr / 1fr 1fr 1fr;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      color: #fff;
 
-      &__name {
-        font-size: 12px;
+      .back {
+        justify-self: start;
+      }
+
+      .channel {
+        justify-self: center;
+        display: grid;
+        justify-items: center;
+        line-height: 1.2;
+
+        &__name {
+          font-size: 8px;
+          font-weight: 400;
+          color: #dddddd;
+          text-transform: uppercase;
+        }
+
+        &__posts {
+          font-size: 12px;
+          font-weight: 500;
+          color: #fff;
+        }
+      }
+
+      .subscribe {
+        justify-self: end;
+        color: #2d68c8;
         font-weight: 500;
-        color: #fff;
-      }
-
-      &__subs {
-        font-size: 10px;
-        font-weight: 400;
-        color: #909090;
+        font-size: 12px;
+        padding-right: 5px;
       }
     }
 
-    .avatar {
+    .footer {
+      width: 90%;
       position: absolute;
-      top: 55px;
-      right: 20px;
-      z-index: 1;
-      width: 30px;
-      height: 30px;
-      border-radius: 100%;
-      background: #fff;
-    }
-
-    .unmute {
-      position: absolute;
-      bottom: 40px;
+      bottom: 35px;
       left: 50%;
       transform: translate(-50%);
       z-index: 1;
-      font-size: 14px;
-      font-weight: 500;
-      color: #1269a3;
+      display: grid;
+      grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr;
+      align-items: center;
+      justify-content: space-between;
+      justify-items: center;
+      gap: 5px;
+      color: #fff;
     }
 
     .mockup {
@@ -94,33 +105,125 @@
       width: 93.7%;
       padding-top: 80px;
       padding-bottom: 60px;
-      background: #142530;
+      background: #202020;
       margin: 9px 11px;
       border-radius: 53.5px;
 
       .content {
         height: 100%;
-        background: url("/src/shared/assets/img/tgbg.png") no-repeat;
-        background-size: cover;
-        padding: 8px;
+        background: #000;
         overflow-x: hidden;
         overflow-y: auto;
         word-wrap: break-word;
         overflow-wrap: break-word;
 
         .post {
-          background: #2b4f67;
-          width: 80%;
-          padding: 5px;
-          padding-bottom: 15px;
-          border-radius: 10px 10px 10px 0px;
+          width: 100%;
           position: relative;
+
+          .head {
+            color: #fff;
+            display: grid;
+            grid-auto-flow: column;
+            justify-content: space-between;
+            align-items: center;
+            padding: 5px 10px;
+
+            .account {
+              display: grid;
+              align-items: center;
+              grid-template: 1fr / 30px 1fr;
+              gap: 5px;
+
+              &__avatar {
+                width: 30px;
+                height: 30px;
+                background: #fff;
+                border-radius: 100%;
+                border: 1px solid #df006f;
+              }
+
+              &__name {
+                color: #fff;
+                line-height: 1.2;
+
+                .name {
+                  font-weight: 600;
+                  font-size: 12px;
+                }
+
+                .category {
+                  font-weight: 300;
+                  font-size: 10px;
+                }
+              }
+            }
+
+            &__more {
+              display: grid;
+              grid-template: 1fr / 1fr 1fr 1fr;
+              gap: 2.5px;
+              padding-right: 5px;
+
+              span {
+                border-radius: 100%;
+                width: 3px;
+                height: 3px;
+                background: #fff;
+              }
+            }
+          }
+
+          .empty__photo {
+            height: 320px;
+            background: rgba(255, 255, 255, 0.1);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            svg {
+              width: 80px;
+              height: 80px;
+            }
+
+            p {
+              margin-top: 10px;
+              font-size: 12px;
+              color: rgba(255, 255, 255, 0.5);
+              font-weight: 500;
+            }
+          }
+
+          &__footer {
+            display: grid;
+            grid-auto-flow: column;
+            justify-content: space-between;
+            align-items: center;
+            gap: 10px;
+            padding: 10px;
+            padding-bottom: 0px;
+
+            .left {
+              display: grid;
+              grid-auto-flow: column;
+              align-items: center;
+              gap: 5px;
+            }
+          }
+
+          &__likes {
+            padding: 10px 10px 5px 10px;
+            font-weight: 500;
+            color: #fff;
+            font-size: 14px;
+          }
 
           &__text {
             height: 100%;
             width: 100%;
             font-size: 14px;
-            padding: 0px 5px;
+            padding: 0px 10px;
             color: #fff;
           }
 
@@ -135,6 +238,20 @@
             justify-content: center;
             font-size: 8px;
             color: #bbbbbb;
+          }
+
+          .post__info {
+            color: rgba(255, 255, 255, 0.5);
+            display: grid;
+            padding: 5px 10px;
+
+            .show__comments {
+              font-size: 12px;
+            }
+
+            .date {
+              font-size: 12px;
+            }
           }
         }
 
