--- a/src/features/postDispayTelegram/UI/telegramPhotos/ui/styles.module.scss
+++ b/src/features/postDispayTelegram/UI/telegramPhotos/ui/styles.module.scss
@@ -11,10 +11,7 @@
   width: 100%;
   height: 100%;
 
-  img {
-    width: 100%;
-    height: 100%;
-
+  > div {
     &:nth-child(3n) {
       grid-column: span 2;
     }
@@ -22,5 +19,10 @@
     &:last-child {
       grid-column: span 2;
     }
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
   }
 }
