--- a/src/features/postFiles/UI/styles.module.scss
+++ b/src/features/postFiles/UI/styles.module.scss
@@ -17,12 +17,13 @@
 
 .modalContent {
   display: grid;
-  width: 50vh;
+  width: 35vw;
   align-items: center;
   grid-auto-flow: row;
   row-gap: 25px;
   padding: 35px;
   border-radius: 25px;
+  overflow: hidden;
 
   .top {
     display: grid;
