--- a/src/entities/bloggerModPlatformCard/UI/styles.module.scss
+++ b/src/entities/bloggerModPlatformCard/UI/styles.module.scss
@@ -1,8 +1,8 @@
 .card {
   display: grid;
   grid-template: 1fr / 3.5fr 1.5fr 4.5fr 6fr;
-  border-radius: 12px;
-  border: 1px solid var(--Personal-colors-main);
+  // border-radius: 12px;
+  // border: 1px solid var(--Personal-colors-main);
   padding: 10px 30px;
   align-items: center;
 
