--- a/src/features/managerNewProjectCard/UI/styles.module.scss
+++ b/src/features/managerNewProjectCard/UI/styles.module.scss
@@ -1,8 +1,8 @@
 .wrapper {
   display: grid;
   grid-auto-flow: row;
-  border-radius: 12px;
-  box-shadow: inset 0px 0px 0px 1.5px var(--Personal-colors-main);
+  // border-radius: 12px;
+  // box-shadow: inset 0px 0px 0px 1.5px var(--Personal-colors-main);
   padding-top: 15px;
 
   .card {
