--- a/src/features/advProjectCard/UI/styles.module.scss
+++ b/src/features/advProjectCard/UI/styles.module.scss
@@ -2,10 +2,11 @@
   display: grid;
   grid-auto-flow: row;
   row-gap: 20px;
-  border-radius: 12px;
-  box-shadow: inset 0px 0px 0px 1.5px var(--Personal-colors-main);
+  // border-radius: 12px;
+  // box-shadow: inset 0px 0px 0px 1.5px var(--Personal-colors-main);
   // border: 1px solid var(--Personal-colors-main);
   padding-top: 20px;
+  min-height: 210px;
 
   .card {
     display: grid;
@@ -183,12 +184,13 @@
     display: grid;
     grid-auto-flow: row;
     align-items: center;
-    border-right: 0.5px solid var(--Personal-colors-main);
-    border-left: 0.5px solid var(--Personal-colors-main);
-    border-top: 0.5px solid var(--Personal-colors-main);
+    // border-right: 0.5px solid var(--Personal-colors-main);
+    // border-left: 0.5px solid var(--Personal-colors-main);
+    // border-top: 0.5px solid var(--Personal-colors-main);
     row-gap: 10px;
-    padding: 10px 10px 0 10px;
-    border-radius: 12px 12px 0 0;
+    padding: 10px;
+    // padding: 10px 10px 0 10px;
+    // border-radius: 12px 12px 0 0;
   }
 }
 
