--- a/src/features/bloggerOfferCard/UI/styles.module.scss
+++ b/src/features/bloggerOfferCard/UI/styles.module.scss
@@ -1,7 +1,7 @@
 .card {
   display: grid;
-  border-radius: 12px;
-  border: 1px solid var(--Personal-colors-main);
+  // border-radius: 12px;
+  // border: 1px solid var(--Personal-colors-main);
   padding: 20px 0;
   width: 100%;
   height: 180px;
