--- a/src/features/managerProjectCard/UI/styles.module.scss
+++ b/src/features/managerProjectCard/UI/styles.module.scss
@@ -2,8 +2,8 @@
   display: grid;
   grid-auto-flow: row;
   row-gap: 20px;
-  border-radius: 12px;
-  box-shadow: inset 0px 0px 0px 1.5px var(--Personal-colors-main);
+  // border-radius: 12px;
+  // box-shadow: inset 0px 0px 0px 1.5px var(--Personal-colors-main);
   // border: 1px solid var(--Personal-colors-main);
   padding-top: 20px;
   // height: 210px;
