--- a/src/features/timeList/UI/styles.module.scss
+++ b/src/features/timeList/UI/styles.module.scss
@@ -23,7 +23,7 @@
   position: relative;
   padding: 35px;
   border-radius: 25px;
-  background: var(--Personal-colors-White);
+  background: #fff;
 
   .top {
     display: grid;
