--- a/src/widgets/header/UI/chat/styles.module.scss
+++ b/src/widgets/header/UI/chat/styles.module.scss
@@ -1,175 +1,158 @@
-.modal {
+.content {
   display: grid;
-  align-items: center;
-  justify-content: center;
+  // margin: 15% auto;
+  border-radius: 25px;
+  background: var(--Personal-colors-White);
+  grid-template: 1fr / 0.7fr 1fr;
+  column-gap: 10px;
+  // height: 600px;
+  overflow: hidden;
 
-  // position: fixed;
-  // z-index: 10;
-  // left: 0;
-  // top: 0;
-  // width: 100%;
-  // height: 100%;
-  // overflow: auto;
-  // background-color: rgba(0, 0, 0, 0.5);
-  // backdrop-filter: blur(5px);
-
-  .content {
+  &__left {
     display: grid;
-    // margin: 15% auto;
-    border-radius: 25px;
-    background: var(--Personal-colors-White);
-    grid-template: 1fr / 0.7fr 1fr;
-    max-width: 45vw;
-    column-gap: 10px;
-    // height: 600px;
-    overflow: hidden;
+    grid-auto-flow: row;
+    align-content: space-between;
+    border-right: 0.5px solid rgba(0, 0, 0, 0.3);
 
-    .content__left {
+    big {
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 0.75;
+      color: var(--Personal-colors-main);
+      padding: 25px 0;
+      text-align: center;
+    }
+
+    .filter {
       display: grid;
-      grid-auto-flow: row;
-      align-content: space-between;
-      border-right: 0.5px solid rgba(0, 0, 0, 0.3);
+      grid-auto-flow: column;
+      padding: 0 10px;
+      margin-bottom: 10px;
 
-      big {
-        font-size: 24px;
+      li {
+        font-size: 14px;
         font-style: normal;
-        font-weight: 400;
+        font-weight: 600;
         line-height: 0.75;
-        color: var(--Personal-colors-main);
-        padding: 25px 0;
-        text-align: center;
+        padding: 10px 0;
       }
+    }
 
-      .filter {
+    .administration {
+      display: grid;
+      grid-auto-flow: column;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px 10px 10px 35px;
+      border-top: 0.5px solid rgba(0, 0, 0, 0.3);
+      cursor: pointer;
+
+      div {
         display: grid;
-        grid-auto-flow: column;
-        padding: 0 10px;
-        margin-bottom: 10px;
+        justify-content: center;
+        align-content: center;
 
-        li {
-          font-size: 14px;
-          font-style: normal;
-          font-weight: 600;
-          line-height: 0.75;
-          padding: 10px 0;
+        img {
+          width: 25px;
+          height: 25px;
+          border-radius: 50%;
+          border: 0.5px solid var(--Personal-colors-main);
         }
       }
 
-      .administration {
+      p {
+        color: var(--Sub-text);
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 0.75;
+      }
+    }
+
+    .all_chats {
+      display: grid;
+      grid-auto-flow: row;
+      align-content: start;
+      overflow-y: scroll;
+      height: 445px;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        display: none;
+      }
+    }
+  }
+
+  &__right {
+    display: grid;
+    grid-template: 1fr 6fr 1fr / 1fr;
+    align-content: space-between;
+    padding-right: 10px;
+    padding-bottom: 10px;
+
+    .close {
+      padding: 15px;
+      border-radius: 50%;
+      &:hover {
+        background-color: rgba(0, 0, 0, 0.1);
+      }
+    }
+
+    .top {
+      display: grid;
+      grid-auto-flow: column;
+      align-items: center;
+      justify-content: space-between;
+
+      p {
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 12px; /* 50% */
+        color: var(--Personal-colors-main);
+      }
+
+      button {
+        svg {
+          width: 20px;
+          height: 20px;
+        }
+      }
+      .info {
         display: grid;
         grid-auto-flow: column;
-        align-items: center;
-        justify-content: space-between;
-        padding: 10px 10px 10px 35px;
-        border-top: 0.5px solid rgba(0, 0, 0, 0.3);
-        cursor: pointer;
+        column-gap: 10px;
+        justify-content: start;
+        padding: 15px;
 
-        div {
-          display: grid;
-          justify-content: center;
-          align-content: center;
-
+        .logo {
           img {
-            width: 25px;
-            height: 25px;
+            width: 40px;
+            height: 40px;
             border-radius: 50%;
             border: 0.5px solid var(--Personal-colors-main);
           }
         }
 
-        p {
-          color: var(--Sub-text);
-          font-size: 12px;
-          font-style: normal;
-          font-weight: 600;
-          line-height: 0.75;
-        }
-      }
-
-      .all_chats {
-        display: grid;
-        grid-auto-flow: row;
-        align-content: start;
-        overflow-y: scroll;
-        height: 445px;
-
-        &::-webkit-scrollbar {
-          display: none;
-        }
-
-        &::-webkit-scrollbar-thumb {
-          display: none;
-        }
-      }
-    }
-
-    .content__right {
-      display: grid;
-      grid-template: 1fr 6fr 1fr / 1fr;
-      align-content: space-between;
-      padding-right: 10px;
-      padding-bottom: 10px;
-
-      .close {
-        padding: 15px;
-        border-radius: 50%;
-        &:hover {
-          background-color: rgba(0, 0, 0, 0.1);
-        }
-      }
-
-      .top {
-        display: grid;
-        grid-auto-flow: column;
-        align-items: center;
-        justify-content: space-between;
-
-        p {
-          font-size: 24px;
-          font-style: normal;
-          font-weight: 400;
-          line-height: 12px; /* 50% */
-          color: var(--Personal-colors-main);
-        }
-
-        button {
-          svg {
-            width: 20px;
-            height: 20px;
-          }
-        }
-        .info {
+        .description {
           display: grid;
-          grid-auto-flow: column;
-          column-gap: 10px;
-          justify-content: start;
-          padding: 15px;
+          grid-auto-flow: row;
+          row-gap: 10px;
+          margin: 5px 0;
 
-          .logo {
-            img {
-              width: 40px;
-              height: 40px;
-              border-radius: 50%;
-              border: 0.5px solid var(--Personal-colors-main);
-            }
-          }
-
-          .description {
-            display: grid;
-            grid-auto-flow: row;
-            row-gap: 10px;
-            margin: 5px 0;
-
-            p {
-              color: var(--Sub-text);
-              font-size: 12px;
-              font-style: normal;
-              font-weight: 600;
-              line-height: 0.75;
-              overflow: hidden;
-              text-overflow: ellipsis;
-              white-space: nowrap;
-            }
+          p {
+            color: var(--Sub-text);
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 0.75;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
           }
         }
       }
