feat: adaptive header

--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -91,6 +91,12 @@
   --container-padding-xs-side: 20px;
   --container-padding-xs-top: 40px;
 
+  --header-height-xl: 80px;
+  --header-height-lg: 80px;
+  --header-height-md: 72px;
+  --header-height-sm: 64px;
+  --header-height-xs: 56px;
+
   /* Extra Large (XL) */
   --font-size-xl-title-main: 44px;
   --font-size-xl-subtitle-main: 24px;
