--- a/src/widgets/header/UI/loginBtn/styles.module.scss
+++ b/src/widgets/header/UI/loginBtn/styles.module.scss
@@ -3,11 +3,17 @@
   grid-auto-flow: column;
   align-items: center;
   column-gap: 30px;
-}
 
-.loginBtn {
-  cursor: pointer;
-  display: grid;
-  grid-auto-flow: column;
-  column-gap: 5px;
+  .registrationBtn {
+    @media (max-width: 992px) {
+      display: none;
+    }
+  }
+
+  .loginBtn {
+    cursor: pointer;
+    display: grid;
+    grid-auto-flow: column;
+    column-gap: 5px;
+  }
 }
