--- a/src/widgets/header/UI/styles.module.scss
+++ b/src/widgets/header/UI/styles.module.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   grid-auto-flow: column;
   align-items: center;
-  height: 80px;
+  height: var(--header-height-xl);
   border-bottom: 0.5px solid rgba(0, 0, 0, 0.3);
   width: 100%;
   z-index: 10;
@@ -12,23 +12,39 @@
   top: 0;
   left: 0;
   background: var(--Personal-colors-White);
-}
 
-.row {
-  display: grid;
-  grid-auto-flow: column;
-  column-gap: 20px;
-  align-items: center;
-}
+  @media (max-width: 992px) {
+    height: var(--header-height-lg);
+  }
 
-.row__left {
-  display: grid;
-  grid-auto-flow: column;
-  column-gap: 50px;
-  align-items: center;
-}
+  @media (max-width: 768px) {
+    height: var(--header-height-md);
+  }
 
-.separator {
-  height: 100%;
-  border-right: 0.5px solid #b2b2b2;
+  @media (max-width: 576px) {
+    height: var(--header-height-sm);
+  }
+
+  @media (max-width: 375px) {
+    height: var(--header-height-xs);
+  }
+
+  .navigation {
+    display: grid;
+    grid-auto-flow: column;
+    column-gap: 50px;
+    align-items: center;
+  }
+
+  .profile {
+    display: grid;
+    grid-auto-flow: column;
+    column-gap: 20px;
+    align-items: center;
+
+    .separator {
+      height: 100%;
+      border-right: 0.5px solid #b2b2b2;
+    }
+  }
 }
